--- a/gis_web/main.css
+++ b/gis_web/main.css
@@ -1,7 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    color: #ffffff;
+    background-color: #323b4b;
+    font-family: 'Kalam', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.header-component {
+    width: 100%;
+    display: flex;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.body-component {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+/* Map Component */
+.left-component {
+    flex: 1 1 80%;
+    height: 100vh;
+    border: solid 2px #ffffff;
+}
+
 #map {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Layer Control Component */
+.right-component {
+    flex: 1 1 20%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    border: solid 2px #ffffff;
+}
+
+.title {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.form {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-option {
+    margin: 10px;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.checkbox {
+    flex: 1 1 15%;
+}
+
+.label {
+    flex: 1 1 75%;
 }
